<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.macmini2.triponyu.profile.PhoneVerifyFragment">
    <android.support.design.widget.TextInputLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/et_insertCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_marginTop="10dp"
            android:id="@+id/et_insertCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insertBank"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:textColor="@android:color/white"
            android:imeOptions="actionUnspecified"
            android:inputType="number"

            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_alignParentBottom="true"


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/done"

        android:background="@drawable/button_background_orange"/>

</RelativeLayout>
