<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.macmini2.triponyu.requestTrip.RequestTripFragment">




    <Button
        android:id="@+id/btn_requestTrip"
        android:text="@string/requestTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:background="@color/orange"/>
    <ScrollView
        android:layout_above="@id/btn_requestTrip"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_destinationPlan"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose your objective trip"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_person"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/selectDate"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_setDate"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select Date"
                android:textSize="18dp"
                android:padding="10dp"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
